--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
+  "ConnectionStrings": {
+    "MongoDb": "mongodb://localhost:27017"
+  },
+
   "AllowedHosts": "*"
 }
