--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,36 @@
 {
-  "Logging": {
-    "LogLevel": {
+
+  "Serilog": {
+    "Using": [],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "D:/Project/Logs/Employee/mylog-{Date}.txt"
+          //"outputTemplate": "{Timestamp} {Message}{NewLine:1}{Exception:1}"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithProcessId",
+      "WithThreadId"
+    ],
+    "Properties": {
+      "ApplicationName": "Serilog.WebApplication"
     }
   },
-
   "ConnectionStrings": {
     "MongoDb": "mongodb://localhost:27017"
   },
